--- a/scss/components/_splide-settings.scss
+++ b/scss/components/_splide-settings.scss
@@ -1,3 +1,10 @@
+.splide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
 .header-btns {
     display: none;
 
