--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -3,9 +3,10 @@
     top: 50%;
     left: 50%;
     width: 100%;
-    height: 100%;
-    display: grid;
-    place-items: center;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: rgba(0, 0, 0, 0.2);
     transform: translate(-50%, -50%);
     text-align: center;
