--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,32 +1,36 @@
 #main-nav {
     position: fixed;
-    width: 100vw;
+    width: 100%;
     z-index: 2;
 }
 
 .l-main-nav {
     position: absolute;
     top: 0;
-    left: -100vw;
-    width: 100vw;
+    left: 0;
+    width: 100%;
     height: 100vh;
     z-index: 2;
     background-color: rgba($c-secondary, .5);
     backdrop-filter: blur(10px);
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    transition: transform .4s;
+    justify-content: center;
+    opacity: 0;
+    transform: translateY(-100%);
+    transition: transform .1s .5s, opacity .4s;
 
     &--active {
-        transform: translateX(100vw);
+        opacity: 1;
+        transform: translateY(0);
+        transition: transform .1s, opacity .4s .1s;
     }
 }
 
 .c-menu {
     list-style: none;
     text-transform: uppercase;
-    margin: 15px;
+    margin: 0 15px;
     background-color: $c-tertiary;
     border-left: 2px solid white;
     border-right: 2px solid white;
