--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,3 +1,8 @@
+#main-header {
+    width: 100%;
+    height: 100vh;
+}
+
 #offer {
     min-height: 100vh;
 }
