--- a/scss/settings/_base.scss
+++ b/scss/settings/_base.scss
@@ -8,8 +8,3 @@
 html {
     scroll-behavior: smooth;
 }
-
-.js-mobile-menu-open {
-    overflow: hidden;
-    height: 100vh;
-}
